syntax = "proto3";

option csharp_namespace = "PrisonService";

import "google/protobuf/empty.proto";

package prison;

service PrisonSrv{
	rpc GetPrisonerByID (IdMessage) returns (PrisonerMessage);
	rpc GetAllPrisoners (google.protobuf.Empty) returns (PrisonerArrayMessage);
	rpc GetPrisonersByName (SearchParamMessage) returns (PrisonerArrayMessage);
	rpc AddPrisoner (PrisonerMessage) returns (google.protobuf.Empty);
	rpc UpdatePrisoner (PrisonerMessage) returns (google.protobuf.Empty);
	rpc DeletePrisonerByID (IdMessage) returns (google.protobuf.Empty);

	rpc GetLocationByID (IdMessage) returns (LocationMessage);
	rpc GetAllLocations (google.protobuf.Empty) returns (LocationArrayMessage);
	rpc GetLocationsByName (SearchParamMessage) returns (LocationArrayMessage);
	rpc AddLocation (LocationMessage) returns (google.protobuf.Empty);
	rpc UpdateLocation (LocationMessage) returns (google.protobuf.Empty);
	rpc DeleteLocationByID (IdMessage) returns (google.protobuf.Empty);

	rpc GetWorkerByID (IdMessage) returns (WorkerMessage);
	rpc GetAllWorkers (google.protobuf.Empty) returns (WorkerArrayMessage);
	rpc GetWorkersByName (SearchParamMessage) returns (WorkerArrayMessage);
	rpc AddWorker (WorkerMessage) returns (google.protobuf.Empty);
	rpc UpdateWorker (WorkerMessage) returns (google.protobuf.Empty);
	rpc DeleteWorkerByID (IdMessage) returns (google.protobuf.Empty);

	rpc GetJobByID (IdMessage) returns (JobMessage);
	rpc GetAllJobs (google.protobuf.Empty) returns (JobArrayMessage);
	rpc GetJobsByName (SearchParamMessage) returns (JobArrayMessage);
	rpc AddJob (JobMessage) returns (google.protobuf.Empty);
	rpc UpdateJob (JobMessage) returns (google.protobuf.Empty);
	rpc DeleteJobByID (IdMessage) returns (google.protobuf.Empty);

	rpc AccessRequest (AccessReqMessage) returns (AccessReplyMessage);
}

message AccessReqMessage{
	string name = 1;
	string pass = 2;
}

message AccessReplyMessage{
	string token = 1;
}

message SearchParamMessage{
	string value = 1;
}

message IdMessage{
	int32 id = 1;
}

message PrisonerArrayMessage{
	repeated PrisonerMessage prisoners = 1;
}

message LocationArrayMessage{
	repeated LocationMessage locations = 1;
}

message WorkerArrayMessage{
	repeated WorkerMessage workers = 1;
}

message JobArrayMessage{
	repeated JobMessage jobs = 1;
}

message BoolMessage{
	bool reply = 1;
}

message PrisonerMessage{
	int32 id = 1;
	string fname = 2;
	string lname = 3;
	double age = 4;
	int64 sentenceDate = 5;
	int64 releaseDate = 6;
	int32 locationId = 7;
}

message LocationMessage{
	int32 id = 1;
	string name = 2;
}

message WorkerMessage{
	int32 id = 1;
	string fname = 2;
	string lname = 3;
	int32 jobId = 4;
	int32 locationId = 5;
}

message JobMessage{
	int32 id = 1;
	string title = 2;
}

